cloudFormation-sample.yaml
---
Parameters:
    # you define parameter here
    SecurityGroupDescription:
        Description: Security Group Description
        Type: String

Resources:
    MyInstance:
        Type: AWS::EC2::Instance
        Properties:
            AvailabilityZone: us-east-1a
            ImageId: ami-0453ec754f44f9a4a
            InstanceType: t3.micro
            SecurityGroups:
                # - represents list item in YAML
                # !Ref is a function that returns the value of a resource
                - !Ref SSHSecurityGroup
                - !Ref ServerSecurityGroup

    # an elastic IP for our instance
    MyEIP:
        Type: AWS::EC2::EIP
        Properties:
            InstanceId: !Ref MyInstance

    # our EC2 security group
    SSHSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupDescription: Enable SSH access via port 22
            SecurityGroupIngress:
                - CidrIp: 0.0.0.0/0
                  FromPort: 22
                  IpProtocol: tcp
                  ToPort: 22

    # our second EC2 security group
    ServerSecurityGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupDescription: !Ref SecurityGroupDescription
            SecurityGroupIngress:
                - IpProtocol: tcp
                  FromPort: 80
                  ToPort: 80
                  CidrIp: 0.0.0.0/0
                - IpProtocol: tcp
                  FromPort: 22
                  ToPort: 22
                  CidrIp: 192.168.1.1/32

Outputs:
    ElasticIP:
        Description: Elastic IP Value
        Value: !Ref MyEIP
